# statsd-filter-proxy-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  entrypoint.sh
.github/workflows/: ci.yml
benchmark/: benchmark.py  naive.js  proxy-config-file-mt.json  proxy-config-file.json  statsd-filter-proxy.js
config/: reference.hjson  reference.json  reference.toml
src/: config.rs  filter.rs  main.rs  server.rs
test/: bad_config.json  echo_client.py  good_config.json  integration_test.py  main.test.rs
